Fix image not align to centre

--- a/PaperTheme/css/style.css
+++ b/PaperTheme/css/style.css
@@ -23,3 +23,17 @@ p
 {
 	margin-bottom: 20px;
 }
+
+.aligncenter {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.alignleft {
+	float: left;
+}
+
+.alignright {
+	float: right;
+}
